--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <!-- Kontainer untuk kotak gambar -->
     <div class="box-container" id="boxContainer">
         <!-- Loop untuk membuat 30 kotak dengan gambar -->
-        <div <a href="result.html" class="box"><img src="download.jpg"></a></div>
+         <div class="box"> 
+            <a href="result.html">  
+               <img src="download.jpg">
+                </a>
+
+
+           </div>
         <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 2"></div>
         <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 3"></div>
         <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 4"></div>
