--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
                <img src="download.jpg">
                 </a>
            </div>
-        <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 2"></div>
+        <div class="box">
+            <a href="menghindar.html">
+                <img src="image_2024-11-01_153355719.png">
+            </a>
+          </div>
         <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 3"></div>
         <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 4"></div>
         <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 5"></div>
