--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            </div>
         <div class="box">
             <a href="menghindar.html">
-                <img src="Screenshot 2024-11-01 153355719.png">
+                <img src="menghindar.jpg">
             </a>
           </div>
         <div class="box"><img src="https://via.placeholder.com/150" alt="Gambar 3"></div>
